--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "ng2-charts": "^6.0.1",
+    "presidential-elections": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
